--- a/docs/01.语言/02.C++/02.C++多态.md
+++ b/docs/01.语言/02.C++/02.C++多态.md
@@ -13,13 +13,195 @@ author:
 ---
 
 ## 一、虚函数
+好的，以下是更新后的代码，其中包含了虚继承和更详细的说明：
 
+```cpp
+#include <iostream>
+
+// 基类 Animal
+class Animal {
+public:
+    virtual void makeSound() {
+        std::cout << "Animal makes a sound." << std::endl;
+    }
+    
+    Animal() {
+        std::cout << "Animal constructor called." << std::endl;
+    }
+    
+    virtual ~Animal() {
+        std::cout << "Animal destructor called." << std::endl;
+    }
+};
+
+// 虚继承的基类
+class Mammal : virtual public Animal {
+public:
+    Mammal() {
+        std::cout << "Mammal constructor called." << std::endl;
+    }
+    
+    ~Mammal() override {
+        std::cout << "Mammal destructor called." << std::endl;
+    }
+};
+
+// 派生类 Dog
+class Dog : virtual public Mammal {
+public:
+    Dog() {
+        std::cout << "Dog constructor called." << std::endl;
+    }
+    
+    void makeSound() override {
+        std::cout << "Dog barks." << std::endl;
+    }
+    
+    ~Dog() override {
+        std::cout << "Dog destructor called." << std::endl;
+    }
+};
+
+// 派生类 Cat
+class Cat : virtual public Mammal {
+public:
+    Cat() {
+        std::cout << "Cat constructor called." << std::endl;
+    }
+    
+    void makeSound() override {
+        std::cout << "Cat meows." << std::endl;
+    }
+    
+    ~Cat() override {
+        std::cout << "Cat destructor called." << std::endl;
+    }
+};
+
+int main() {
+    Animal* animal1 = new Dog();
+    Animal* animal2 = new Cat();
+    
+    animal1->makeSound();  // 输出：Dog barks.
+    animal2->makeSound();  // 输出：Cat meows.
+    
+    delete animal1;  // 输出：Dog destructor called. Mammal destructor called. Animal destructor called.
+    delete animal2;  // 输出：Cat destructor called. Mammal destructor called. Animal destructor called.
+    
+    return 0;
+}
+```
+
+在这个示例中，我们引入了一个新的基类 `Mammal`，它使用了虚继承（`virtual public Animal`）。`Dog` 和 `Cat` 类都继承自 `Mammal`。
+
+虚表指针是编译器在具有虚函数的类中插入的隐藏指针。它指向虚表（vtable），虚表是一个包含了虚函数地址的表格。虚表指针的存在使得程序在运行时能够根据对象的实际类型动态地确定调用的是哪个虚函数。
+
+构造与析构的顺序如下：
+1. 首先创建 `Dog` 对象。在创建 `Dog` 对象时，会按照继承关系依次调用基类的构造函数，这里是 `Animal` 的构造函数，然后是 `Mammal` 的构造函数，最后是 `Dog` 的构造函数。构造顺序是从基类到派生类。
+2. 创建 `Cat` 对象的过程也是一样的，按照继承关系依次调用基类的构造函数，这里是 `Animal` 的构造函数，然后是 `Mammal` 的构造函数，最后是 `Cat` 的构造函数。
+3. 调用 `animal1->makeSound()`，由于 `animal1` 是基类指针指向 `Dog` 对象，因此会调用 `Dog` 的 `makeSound()` 函数，输出 "Dog barks."。
+4. 调用 `animal2->makeSound()`，由于 `animal2` 是基类指针指向 `Cat` 对象，因此会调用 `Cat` 的 `makeSound()` 函数，输出 "Cat meows."。
+5. 删除 `animal1` 和 `animal2`，由于基类的析构函数声明为虚函数，在删除基类指针时会依次调用派生类和基类的析构函数。所以先调用 `Dog` 的析构函数，然后是 `Mammal` 的析构函数，最后是 `Animal` 的析构函数。析构顺序是从派生类到基类。
+
+程序的输出结果如下：
+```
+Animal constructor called.
+Mammal constructor called.
+Dog constructor called.
+Animal constructor called.
+Mammal constructor called.
+Cat constructor called.
+Dog barks.
+Cat meows.
+Dog destructor called.
+Mammal destructor called.
+Animal destructor called.
+Cat destructor called.
+Mammal destructor called.
+Animal destructor called.
+```
 ## 二、虚析构
 
 ## 三、多态
 
 ## 四、虚继承
+当然，请看以下示例：
 
+```cpp
+class Animal {
+public:
+  int age;
+};
+
+class Mammal : public Animal {
+public:
+  std::string species;
+};
+
+class Bird : public Animal {
+public:
+  std::string feathersColor;
+};
+
+class Platypus : public Mammal, public Bird {
+public:
+  bool laysEggs;
+};
+```
+
+在这个示例中，`Platypus` 类继承了 `Mammal` 类和 `Bird` 类，而 `Mammal` 和 `Bird` 类又都继承了 `Animal` 类。
+
+通过菱形继承，`Platypus` 类间接继承了 `Animal` 类两次，一次来自于 `Mammal` 类，另一次来自于 `Bird` 类。这就形成了菱形继承的结构，如下所示：
+
+```
+    Animal
+    /    \
+ Mammal  Bird
+    \    /
+   Platypus
+```
+
+如果不使用虚继承，那么在 `Platypus` 类中将有两个 `Animal` 对象，即 `Mammal` 类和 `Bird` 类各自继承的 `Animal` 对象。这样就会导致 `Platypus` 类中存在两份相同的 `age` 成员变量，引发二义性问题。
+
+为了解决这个问题，我们可以使用虚继承：
+
+```cpp
+class Animal {
+public:
+  int age;
+};
+
+class Mammal : virtual public Animal {
+public:
+  std::string species;
+};
+
+class Bird : virtual public Animal {
+public:
+  std::string feathersColor;
+};
+
+class Platypus : public Mammal, public Bird {
+public:
+  bool laysEggs;
+};
+```
+
+通过在 `Mammal` 和 `Bird` 类的继承声明中添加 `virtual` 关键字，将基类 `Animal` 声明为虚基类。这样，在 `Platypus` 类中就只会有一个共享的 `Animal` 对象，避免了二义性问题的发生。
+
+虚继承非常适用于菱形继承或多继承中存在二义性的情况，它确保了基类在派生类中只有一个实例，解决了二义性问题。
+虚继承是一种用于解决多继承中的"菱形继承"问题的技术。"菱形继承"指的是在一个继承体系中，派生类通过多条路径间接地继承同一个基类，导致同一个基类在派生类中存在多个实例的问题。
+
+虚继承通过引入虚基类来解决这个问题。虚基类是在继承体系中被声明为虚继承的基类，它的成员在派生类中仅存在一个实例。这样可以避免多次继承导致同一个基类在派生类中重复出现，从而消除了歧义和资源浪费。
+
+在上面的示例中，`Mammal` 类使用了虚继承(`virtual public Animal`)，作为 `Dog` 类和 `Cat` 类的共同基类。这样，无论是 `Dog` 还是 `Cat` 对象，它们在内存中只有一个 `Animal` 实例，避免了 `Animal` 被重复继承。
+
+使用虚继承的主要作用如下：
+1. 解决菱形继承问题：通过虚基类，确保在派生类中只有一个实例，消除了重复继承带来的二义性。
+2. 节省内存空间：减少了派生类中虚基类的存储开销，避免了重复数据的冗余。
+3. 维护类之间的关系：通过虚继承，明确了派生类与虚基类之间的直接继承关系。
+
+需要注意的是，虚继承会增加解析虚函数的时间开销，因为在运行时需要通过虚表指针来定位正确的虚函数。所以在设计类继承体系时，应该根据具体情况来评估是否使用虚继承。
 ## 五、虚表指针
 
 虚函数表（Virtual Function Table），简称为 vtable，是C++中实现多态性（polymorphism）的关键机制之一。
@@ -36,3 +218,6 @@ author:
 
 动态联编 ： 首先需要取到对象的首地址，然后再解引用取到虚函数表的首地址后，再加上偏移量才能找到要调的虚函数，然后call调用。
 静态联编：
+
+
+虚函数、虚析构、多态、虚继承、虚表指针
