--- a/docs/01.语言/02.C++/03.C++关键字const.md
+++ b/docs/01.语言/02.C++/03.C++关键字const.md
@@ -19,3 +19,23 @@ author:
 常对象
 常成员函数
 
+常变量（const variable）：被声明为 `const` 的变量，在其初始化后不能被修改。常变量在声明时必须进行初始化，且不能再修改其值。
+
+常引用（const reference）：被声明为 `const` 的引用，用于指向 const 对象。常引用可以绑定到非 const 对象或 const 对象，但通过常引用无法修改所引用的对象。
+
+常量指针（const pointer）：指向常量（const）对象的指针。常量指针本身可以修改，但不能通过常量指针修改所指向的对象。
+
+指针常量（pointer to const）：指针本身是常量，即指针不能指向其他对象，但可以通过该指针修改所指向的对象。
+
+常对象（const object）：被声明为 `const` 的对象，在其初始化后不能被修改。常对象的成员变量也自动成为常量。
+
+常成员函数（const member function）：类中的成员函数被声明为 `const` 成员函数后，表示该函数不会修改对象的状态。在常对象或常引用对象上只能调用常成员函数，而不能调用非常成员函数。
+
+总结：
+- 常变量和常引用用于声明不可修改的对象或引用。
+- 常量指针和指针常量用于指向常量对象的指针。
+- 常对象是指整个对象都是常量，其成员变量也是常量。
+- 常成员函数表示该函数不会修改对象的状态，只能在常对象或常引用对象上调用。
+
+
+
