--- a/docs/01.语言/02.C++/01.C++构造函数.md
+++ b/docs/01.语言/02.C++/01.C++构造函数.md
@@ -12,6 +12,143 @@ author:
   link: https://github.com/erlangtui
 ---
 
+> 当创建一个类时，可以定义不同类型的构造函数来初始化对象的属性和状态
+
+## 一、默认构造函数
+* 默认构造函数（Default Constructor）：默认构造函数没有参数，用于创建对象时不提供任何初始值。
+* 它可以使用默认值或者对成员变量执行适当的初始化操作。
+* 如果没有显式定义构造函数，则<span style="color: red;">编译器会为类生成一个默认构造函数</span>。
+```cpp
+// 默认构造函数
+MyClass() : data(nullptr), size(0) {
+    name = "default construct";
+    std::cout<< name << std::endl;
+}
+```
+
+## 二、带参构造函数
+* 带参数构造函数（Parameterized Constructor）：带参数构造函数接受一个或多个参数，并使用这些参数来初始化对象的成员变量。
+* 它可以根据传入的参数执行特定的初始化操作，以定制化地创建对象。
+
+```cpp
+// 带参构造函数
+MyClass(int* newData, int newSize, std::string newName) : size(newSize) {
+    data = new int[size];
+    for (int i = 0; i < size; i++) {
+        data[i] = newData[i];
+    }
+    name = "paras construct";
+    std::cout<< name << std::endl;
+}
+```
+
+## 三、拷贝构造函数
+* 拷贝构造函数（Copy Constructor）：拷贝构造函数用于创建新对象，该对象是以现有对象作为参数进行复制而来的。
+* 它通过将一个对象的值复制到另一个<span style="color: red;">**新对象中来创建副本**</span>。
+* 通常情况下，拷贝构造函数的<span style="color: red;">**参数是一个同类的引用或常量引用**</span>。
+* 如果没有显式定义构造函数，则<span style="color: red;">编译器会为类生成一个默认构造函数</span>。
+
+```cpp
+// 拷贝构造函数
+MyClass(const MyClass& other) : size(other.size) {
+    data = new int[size]; // 深拷贝
+    for (int i = 0; i < size; i++) {
+        data[i] = other.data[i];
+    }
+    name = "copy construct";
+    std::cout<< name << std::endl;
+}
+```
+
+## 四、移动构造函数
+* 移动构造函数（Move Constructor）：移动构造函数用于创建新对象，<span style="color: red;">**该对象获取了临时对象的资源所有权**</span>。
+* 移动构造函数通过从源对象“移动”数据，而不是复制数据，来创建<span style="color: red;">**新对象**</span>。
+* 移动构造函数通常通过<span style="color: red;">**右值引用作为参数**</span>来实现高效的资源转移。
+
+```cpp
+// 移动构造函数
+MyClass(MyClass&& other) noexcept : data(other.data), size(other.size) {
+    other.data = nullptr;
+    other.size = 0;
+    name = "move construct";
+    std::cout<< "move construct" << std::endl;
+}
+```
+
+## 五、拷贝赋值函数
+* 拷贝赋值函数（Copy Assignment Operator）：拷贝赋值函数用于将一个对象的值复制给另一个<span style="color: red;">**已存在**</span>的对象。
+* 通过重载赋值操作符（`=`），它允许对象之间进行赋值操作。
+* 通常情况下，拷贝赋值函数的<span style="color: red;">**参数是一个同类的引用或常量引用**</span>。
+* 如果没有显式定义构造函数，则<span style="color: red;">编译器会为类生成一个默认构造函数</span>。
+
+```cpp
+// 拷贝赋值函数
+MyClass& operator=(const MyClass& other) {
+    if (this != &other) {
+        delete[] data;
+        size = other.size;
+        data = new int[size]; // 深拷贝
+        for (int i = 0; i < size; i++) {
+            data[i] = other.data[i];
+        }
+    }
+    name = "copy assign";
+    std::cout<< "copy assign" << std::endl;
+    return *this;
+}
+```
+
+## 六、移动赋值函数
+* 移动赋值函数（Move Assignment Operator）：移动赋值函数用于将一个对象的临时值转移到另一个<span style="color: red;">**已存在**</span>的对象中。
+* 通过重载赋值操作符（`=`）和<span style="color: red;">**右值引用参数**</span>，它允许对象之间进行资源的高效转移。
+
+```cpp
+// 移动赋值函数
+MyClass& operator=(MyClass&& other) noexcept {
+    if (this != &other) {
+        delete[] data;
+        data = other.data;
+        size = other.size;
+        other.data = nullptr;
+        other.size = 0;
+    }
+    name = "move assign";
+    std::cout<< "move assign" << std::endl;
+    return *this;
+}
+```
+
+## 七、注意点
+* 执行拷贝构造函数还是执行拷贝赋值函数的区别点在于是否创建新的对象：
+  * <span style="color: red;">**如果需要创建新的对象，则是拷贝构造函数**</span>；
+  * <span style="color: red;">**如果已经存在新的对象，则是拷贝赋值函数**</span>；
+* 执行移动构造函数还是执行移动赋值函数的区别点同上；
+
+## 八、值传参与引用传参
+### 1，值传参（Pass by Value）：
+   - 值传参会创建原始对象的副本，并将副本传递给函数，对对象的各个属性值进行浅拷贝。
+   - 值传参适用于需要修改参数值或不希望被调用函数对原始对象进行修改的情况。
+   - 值传参传递的是副本，因此对参数的修改不会影响原始对象本身。
+   - 对于较小的对象，值传参的性能通常比较高效，因为不需要处理引用或指针。
+
+### 2，引用传参（Pass by Reference）：
+   - 引用传参通过引用将原始对象直接传递给函数，不需要拷贝对象的各个属性值。
+   - 函数内部对参数的修改会直接影响到原始对象。
+   - 引用传参适用于需要修改参数值，并希望这种修改对原始对象生效的情况。
+   - 引用传参省去了拷贝对象的开销，对于较大的对象或容器类型，引用传参可能更高效。
+   - 由于引用传参直接对原始对象进行操作，需要注意函数内部对参数的修改可能会影响到原始对象的状态。
+
+### 3，总的来说，值传参和引用传参在以下方面有区别：
+- 值传参会创建副本，而引用传参直接操作原始对象。
+- 值传参适用于需要修改参数值或不希望被调用函数对原始对象进行修改的情况。
+- 引用传参适用于需要修改参数值，并希望这种修改对原始对象生效的情况。
+- 值传参适用于较小的对象，而引用传参适用于较大的对象或容器类型。
+- 值传参的性能通常比较高效，而引用传参省去了拷贝对象的开销。
+
+选择值传参还是引用传参取决于具体的需求和情况。如果需要在函数内部修改参数，并希望这些修改影响到原始对象，可以选择引用传参。否则，如果不需要修改参数或希望避免影响原始对象，可以选择值传参。
+
+## 九、完整示例
+
 ```cpp
 #include <iostream>
 
@@ -35,7 +172,7 @@ public:
 
     // 拷贝构造函数
     MyClass(const MyClass& other) : size(other.size) {
-        data = new int[size];
+        data = new int[size]; // 深拷贝
         for (int i = 0; i < size; i++) {
             data[i] = other.data[i];
         }
@@ -56,7 +193,7 @@ public:
         if (this != &other) {
             delete[] data;
             size = other.size;
-            data = new int[size];
+            data = new int[size]; // 深拷贝
             for (int i = 0; i < size; i++) {
                 data[i] = other.data[i];
             }
@@ -80,6 +217,7 @@ public:
         return *this;
     }
 
+    // 析构函数
     ~MyClass() {
         std::cout << std::boolalpha;
         std::cout << "~MyClass: " << name << "  data is null: " << (data == nullptr) << std::endl;
@@ -116,38 +254,33 @@ int main(int argc, char **argv) {
 
     return 0;
 }
+
+/*
+output:
+
+default construct
+default construct
+default construct
+default construct
+paras construct
+copy construct
+copy construct
+move construct
+-----------------
+copy assign
+move assign
+-----------------
+~MyClass: move construct  data is null: true
+~MyClass: copy construct  data is null: false
+~MyClass: copy construct  data is null: true
+~MyClass: paras construct  data is null: false
+~MyClass: default construct  data is null: true
+~MyClass: move assign  data is null: false
+~MyClass: copy assign  data is null: false
+~MyClass: default construct  data is null: true
+
+*/
 ```
 
-> 当创建一个类时，可以定义不同类型的构造函数来初始化对象的属性和状态
-## 一、默认构造函数
-* 默认构造函数（Default Constructor）：默认构造函数没有参数，用于创建对象时不提供任何初始值。
-* 它可以使用默认值或者对成员变量执行适当的初始化操作。
-* 如果没有显式定义构造函数，则编译器会为类生成一个默认构造函数。
-
-## 二、带参构造函数
-* 带参数构造函数（Parameterized Constructor）：带参数构造函数接受一个或多个参数，并使用这些参数来初始化对象的成员变量。
-* 它可以根据传入的参数执行特定的初始化操作，以定制化地创建对象。
-## 三、拷贝构造函数
-* 拷贝构造函数（Copy Constructor）：拷贝构造函数用于创建新对象，该对象是以现有对象作为参数进行复制而来的。
-* 它通过将一个对象的值复制到另一个**新对象**中来**创建副本**。
-* 通常情况下，拷贝构造函数的**参数是一个同类的引用或常量引用**。
-* 如果没有显式定义构造函数，则编译器会为类生成一个默认构造函数。
-## 四、移动构造函数
-* 移动构造函数（Move Constructor）：移动构造函数用于创建新对象，**该对象获取了临时对象的资源所有权**。
-* 移动构造函数通过从源对象“移动”数据，而不是复制数据，来创建**新对象**。
-* 移动构造函数通常通过**右值引用作为参数**来实现高效的资源转移。
-
-## 五、拷贝赋值函数
-* 拷贝赋值函数（Copy Assignment Operator）：拷贝赋值函数用于将一个对象的值复制给另一个**已存在**的对象。
-* 通过重载赋值操作符（`=`），它允许对象之间进行赋值操作。
-* 通常情况下，拷贝赋值函数的**参数是一个同类的引用或常量引用**。
-* 如果没有显式定义构造函数，则编译器会为类生成一个默认构造函数。
-## 六、移动赋值函数
-* 移动赋值函数（Move Assignment Operator）：移动赋值函数用于将一个对象的临时值转移到另一个**已存在**的对象中。
-* 通过重载赋值操作符（`=`）和**右值引用参数**，它允许对象之间进行资源的高效转移。
-
-## 七、注意点
-* 执行拷贝构造函数还是执行拷贝赋值函数的区别点在于是否创建新的对象：
-  * 如果需要创建新的对象，则是拷贝构造函数；
-  * 如果已经存在新的对象，则是拷贝赋值函数；
-* 执行移动构造函数还是执行移动赋值函数的区别点同上；
+* 构造函数执行顺序：x、y、z、a、b、c、d、e；
+* 析构函数执行顺序相反，其中 y、z 分别执行了拷贝赋值和移动赋值，所以析构的时候打印出的 name 为 copy assign 和 move assign；
