--- a/docs/01.语言/02.C++/101.编译与调试/01.gcc与g++.md
+++ b/docs/01.语言/02.C++/101.编译与调试/01.gcc与g++.md
@@ -114,3 +114,5 @@ author:
 -O0，-O1，-O2，-O3          |  英文单词Optimize的第一个字母O（意为：优化），编译器的优化选项的4个级别，-O0表示没有优化,-O1为缺省值，-O3优化级别最高，优化的是生成的程序的大小和程序的执行速度
 
  
+ <!-- ldd -->
+ <!-- strings -->
