--- a/docs/01.语言/02.C++/01.C++构造函数.md
+++ b/docs/01.语言/02.C++/01.C++构造函数.md
@@ -3,7 +3,6 @@ title: C++构造函数
 date: 2023-08-26 15:04:13
 permalink: /pages/d5097c/
 categories:
-  - 语言
   - C++
 tags:
   - 
@@ -20,9 +19,10 @@ author:
 * 如果没有显式定义构造函数，则<span style="color: red;">编译器会为类生成一个默认构造函数</span>。
 ```cpp
 // 默认构造函数
-MyClass() : data(nullptr), size(0) {
+MyClass() : data(nullptr), size(0)
+{
     name = "default construct";
-    std::cout<< name << std::endl;
+    std::cout << name << std::endl;
 }
 ```
 
@@ -32,13 +32,15 @@ MyClass() : data(nullptr), size(0) {
 
 ```cpp
 // 带参构造函数
-MyClass(int* newData, int newSize, std::string newName) : size(newSize) {
+MyClass(int *newData, int newSize, std::string newName) : size(newSize)
+{
     data = new int[size];
-    for (int i = 0; i < size; i++) {
+    for (int i = 0; i < size; i++)
+    {
         data[i] = newData[i];
     }
     name = "paras construct";
-    std::cout<< name << std::endl;
+    std::cout << name << std::endl;
 }
 ```
 
@@ -50,13 +52,15 @@ MyClass(int* newData, int newSize, std::string newName) : size(newSize) {
 
 ```cpp
 // 拷贝构造函数
-MyClass(const MyClass& other) : size(other.size) {
-    data = new int[size]; // 深拷贝
-    for (int i = 0; i < size; i++) {
+MyClass(const MyClass &other) : size(other.size)
+{
+    data = new int[size];
+    for (int i = 0; i < size; i++)
+    {
         data[i] = other.data[i];
     }
     name = "copy construct";
-    std::cout<< name << std::endl;
+    std::cout << name << std::endl;
 }
 ```
 
@@ -67,11 +71,12 @@ MyClass(const MyClass& other) : size(other.size) {
 
 ```cpp
 // 移动构造函数
-MyClass(MyClass&& other) noexcept : data(other.data), size(other.size) {
+MyClass(MyClass &&other) noexcept : data(other.data), size(other.size)
+{
     other.data = nullptr;
     other.size = 0;
     name = "move construct";
-    std::cout<< "move construct" << std::endl;
+    std::cout << "move construct" << std::endl;
 }
 ```
 
@@ -83,17 +88,20 @@ MyClass(MyClass&& other) noexcept : data(other.data), size(other.size) {
 
 ```cpp
 // 拷贝赋值函数
-MyClass& operator=(const MyClass& other) {
-    if (this != &other) {
+MyClass &operator=(const MyClass &other)
+{
+    if (this != &other)
+    {
         delete[] data;
         size = other.size;
-        data = new int[size]; // 深拷贝
-        for (int i = 0; i < size; i++) {
+        data = new int[size];
+        for (int i = 0; i < size; i++)
+        {
             data[i] = other.data[i];
         }
     }
     name = "copy assign";
-    std::cout<< "copy assign" << std::endl;
+    std::cout << "copy assign" << std::endl;
     return *this;
 }
 ```
@@ -104,8 +112,10 @@ MyClass& operator=(const MyClass& other) {
 
 ```cpp
 // 移动赋值函数
-MyClass& operator=(MyClass&& other) noexcept {
-    if (this != &other) {
+MyClass &operator=(MyClass &&other) noexcept
+{
+    if (this != &other)
+    {
         delete[] data;
         data = other.data;
         size = other.size;
@@ -113,7 +123,7 @@ MyClass& operator=(MyClass&& other) noexcept {
         other.size = 0;
     }
     name = "move assign";
-    std::cout<< "move assign" << std::endl;
+    std::cout << "move assign" << std::endl;
     return *this;
 }
 ```
@@ -124,88 +134,77 @@ MyClass& operator=(MyClass&& other) noexcept {
   * <span style="color: red;">**如果已经存在新的对象，则是拷贝赋值函数**</span>；
 * 执行移动构造函数还是执行移动赋值函数的区别点同上；
 
-## 八、值传参与引用传参
-### 1，值传参（Pass by Value）：
-   - 值传参会创建原始对象的副本，并将副本传递给函数，对对象的各个属性值进行浅拷贝。
-   - 值传参适用于需要修改参数值或不希望被调用函数对原始对象进行修改的情况。
-   - 值传参传递的是副本，因此对参数的修改不会影响原始对象本身。
-   - 对于较小的对象，值传参的性能通常比较高效，因为不需要处理引用或指针。
-
-### 2，引用传参（Pass by Reference）：
-   - 引用传参通过引用将原始对象直接传递给函数，不需要拷贝对象的各个属性值。
-   - 函数内部对参数的修改会直接影响到原始对象。
-   - 引用传参适用于需要修改参数值，并希望这种修改对原始对象生效的情况。
-   - 引用传参省去了拷贝对象的开销，对于较大的对象或容器类型，引用传参可能更高效。
-   - 由于引用传参直接对原始对象进行操作，需要注意函数内部对参数的修改可能会影响到原始对象的状态。
-
-### 3，总的来说，值传参和引用传参在以下方面有区别：
-- 值传参会创建副本，而引用传参直接操作原始对象。
-- 值传参适用于需要修改参数值或不希望被调用函数对原始对象进行修改的情况。
-- 引用传参适用于需要修改参数值，并希望这种修改对原始对象生效的情况。
-- 值传参适用于较小的对象，而引用传参适用于较大的对象或容器类型。
-- 值传参的性能通常比较高效，而引用传参省去了拷贝对象的开销。
-
-选择值传参还是引用传参取决于具体的需求和情况。如果需要在函数内部修改参数，并希望这些修改影响到原始对象，可以选择引用传参。否则，如果不需要修改参数或希望避免影响原始对象，可以选择值传参。
-
-## 九、完整示例
+## 八、、完整示例
 
 ```cpp
 #include <iostream>
 
-class MyClass {
+class MyClass
+{
 public:
     // 默认构造函数
-    MyClass() : data(nullptr), size(0) {
+    MyClass() : data(nullptr), size(0)
+    {
         name = "default construct";
-        std::cout<< name << std::endl;
+        std::cout << name << std::endl;
     }
 
     // 带参构造函数
-    MyClass(int* newData, int newSize, std::string newName) : size(newSize) {
+    MyClass(int *newData, int newSize, std::string newName) : size(newSize)
+    {
         data = new int[size];
-        for (int i = 0; i < size; i++) {
+        for (int i = 0; i < size; i++)
+        {
             data[i] = newData[i];
         }
         name = "paras construct";
-        std::cout<< name << std::endl;
+        std::cout << name << std::endl;
     }
 
     // 拷贝构造函数
-    MyClass(const MyClass& other) : size(other.size) {
-        data = new int[size]; // 深拷贝
-        for (int i = 0; i < size; i++) {
+    MyClass(const MyClass &other) : size(other.size)
+    {
+        data = new int[size];
+        for (int i = 0; i < size; i++)
+        {
             data[i] = other.data[i];
         }
         name = "copy construct";
-        std::cout<< name << std::endl;
+        std::cout << name << std::endl;
     }
 
     // 移动构造函数
-    MyClass(MyClass&& other) noexcept : data(other.data), size(other.size) {
+    MyClass(MyClass &&other) noexcept : data(other.data), size(other.size)
+    {
         other.data = nullptr;
         other.size = 0;
         name = "move construct";
-        std::cout<< "move construct" << std::endl;
+        std::cout << "move construct" << std::endl;
     }
 
     // 拷贝赋值函数
-    MyClass& operator=(const MyClass& other) {
-        if (this != &other) {
+    MyClass &operator=(const MyClass &other)
+    {
+        if (this != &other)
+        {
             delete[] data;
             size = other.size;
-            data = new int[size]; // 深拷贝
-            for (int i = 0; i < size; i++) {
+            data = new int[size];
+            for (int i = 0; i < size; i++)
+            {
                 data[i] = other.data[i];
             }
         }
         name = "copy assign";
-        std::cout<< "copy assign" << std::endl;
+        std::cout << "copy assign" << std::endl;
         return *this;
     }
 
     // 移动赋值函数
-    MyClass& operator=(MyClass&& other) noexcept {
-        if (this != &other) {
+    MyClass &operator=(MyClass &&other) noexcept
+    {
+        if (this != &other)
+        {
             delete[] data;
             data = other.data;
             size = other.size;
@@ -213,25 +212,26 @@ public:
             other.size = 0;
         }
         name = "move assign";
-        std::cout<< "move assign" << std::endl;
+        std::cout << "move assign" << std::endl;
         return *this;
     }
 
-    // 析构函数
-    ~MyClass() {
+    ~MyClass()
+    {
         std::cout << std::boolalpha;
         std::cout << "~MyClass: " << name << "  data is null: " << (data == nullptr) << std::endl;
         delete[] data;
     }
 
 private:
-    int* data;
+    int *data;
     int size;
     std::string name;
 };
 
-int main(int argc, char **argv) {
-    int data[3] = {1,2,3};
+int main(int argc, char **argv)
+{
+    int data[3] = {1, 2, 3};
     // 执行默认构造函数
     MyClass x, y, z, a;
     // 执行带参构造函数
