--- a/docs/01.语言/02.C++/02.参数传递的几种方式.md
+++ b/docs/01.语言/02.C++/02.参数传递的几种方式.md
@@ -3,7 +3,6 @@ title: 参数传递的几种方式
 date: 2023-08-31 23:16:26
 permalink: /pages/372b06/
 categories:
-  - 语言
   - C++
 tags:
   - 
@@ -14,8 +13,29 @@ author:
 
 ## 一、值传参
 
+
+### 1，值传参（Pass by Value）：
+   - 值传参会创建原始对象的副本，并将副本传递给函数，对对象的各个属性值进行浅拷贝。
+   - 值传参适用于需要修改参数值或不希望被调用函数对原始对象进行修改的情况。
+   - 值传参传递的是副本，因此对参数的修改不会影响原始对象本身。
+   - 对于较小的对象，值传参的性能通常比较高效，因为不需要处理引用或指针。
 ## 二、引用传参
 
+### 2，引用传参（Pass by Reference）：
+   - 引用传参通过引用将原始对象直接传递给函数，不需要拷贝对象的各个属性值。
+   - 函数内部对参数的修改会直接影响到原始对象。
+   - 引用传参适用于需要修改参数值，并希望这种修改对原始对象生效的情况。
+   - 引用传参省去了拷贝对象的开销，对于较大的对象或容器类型，引用传参可能更高效。
+   - 由于引用传参直接对原始对象进行操作，需要注意函数内部对参数的修改可能会影响到原始对象的状态。
+
+### 3，总的来说，值传参和引用传参在以下方面有区别：
+- 值传参会创建副本，而引用传参直接操作原始对象。
+- 值传参适用于需要修改参数值或不希望被调用函数对原始对象进行修改的情况。
+- 引用传参适用于需要修改参数值，并希望这种修改对原始对象生效的情况。
+- 值传参适用于较小的对象，而引用传参适用于较大的对象或容器类型。
+- 值传参的性能通常比较高效，而引用传参省去了拷贝对象的开销。
+
+选择值传参还是引用传参取决于具体的需求和情况。如果需要在函数内部修改参数，并希望这些修改影响到原始对象，可以选择引用传参。否则，如果不需要修改参数或希望避免影响原始对象，可以选择值传参。
 ## 三、指针传参
 
 引用传参和指针传参是 C++ 中常用的两种向函数传递参数的方式，它们有以下几点区别：
