--- a/docs/01.语言/02.C++/03.C++关键字const.md
+++ b/docs/01.语言/02.C++/03.C++关键字const.md
@@ -3,7 +3,6 @@ title: C++关键字const
 date: 2023-08-30 19:18:13
 permalink: /pages/d9a7e8/
 categories:
-  - 语言
   - C++
 tags:
   - 
@@ -13,19 +12,65 @@ author:
 ---
 
 
-常变量
-常引用
-常量指针，指针常量
-常对象
-常成员函数
+## 一、常变量
+* 声明方式：<span style="color: red;">**const 变量类型 变量名，或 变量类型 const 变量名**</span>；
+* 该变量需要**在声明时被初始化**，后续不允许再被直接改变；
+* const 修饰的是变量，即变量不可被改变；
+* 示例：
+```cpp
+const int a;      // 编译错误，需要初始化
+const int b = 1;  // 正确
+int const c = 2;  // 正确
+b = 3;            // 错误，不允许改变常量的值
+```
+## 二、常引用
+* 声明方式：<span style="color: red;">**const 变量类型 &变量名，或 变量类型 const &变量名**</span>；
+* 该引用需要**在声明时被初始化**，后续不允许再被直接改变；
+* const 修饰的是引用，即引用不可被改变；
+* 示例：
+```cpp
+int a = 1;          // 正确
+const int &b;       // 编译错误，需要初始化
+const int &c = a;   // 正确
+int const &d = a;   // 正确
+b = c;              // 错误，不允许改变常引用的值
+```
+## 三、常指针
+* 声明方式：<span style="color: red;">**const 变量类型 *变量名，或 变量类型 const *变量名**</span>；
+* 该指针的值是其指向变量的地址，可以被改变，所以不需要在声明时被初始化，但<span style="color: red;">**该指针指向的指不允许被改变**</span>；
+* const 修饰的是该指针指向的变量，而不是该指针的值；
+* 示例：
+```cpp
+int a = 1;          // 正确
+const int *b = &a;  // 正确
+int const *c = &a;  // 正确
+const int *d;       // 正确，不需要在创建时初始化
+d = &a;             // 正确，允许改变指针变量的值
+*d = 3;             // 错误，不允许改变指针指向的值
+```
+## 四、指针常量
+* 声明方式：<span style="color: red;">**变量类型 *const 变量名**</span>；
+* 该指针的值不可以被改变，需要在声明时被初始化，但<span style="color: red;">**该指针指向的指允许被改变**</span>；
+* const 修饰的是该指针的值，而不是该指针指向的值；
+* 示例：
+```cpp
+int a = 1;          // 正确
+int *const b = &a;  // 正确
+int *const c;       // 错误，需要再声明的时候初始化
+*b = 2;             // 正确，允许改变指针指向的值
 
-常变量（const variable）：被声明为 `const` 的变量，在其初始化后不能被修改。常变量在声明时必须进行初始化，且不能再修改其值。
+// 左边const修饰指针指向的值，右边const修饰指针的值
+const int *const d = &a;  // 正确
+d = &b;                   // 错误，指针的值不允许被改变
+*d = 3;                   // 错误，指针指向的值不允许被改变        
+```
+## 五、常对象
+* 被 const 修饰的对象称为常对象，等同于上述的常变量，只不过变量类型是自定义的类型，而非内置类型；
+* 常对象只能访问 const 成员函数，而非 const 对象可以访问任意的成员函数，包括const成员函数；
+## 六、常成员函数
 
-常引用（const reference）：被声明为 `const` 的引用，用于指向 const 对象。常引用可以绑定到非 const 对象或 const 对象，但通过常引用无法修改所引用的对象。
-
-常量指针（const pointer）：指向常量（const）对象的指针。常量指针本身可以修改，但不能通过常量指针修改所指向的对象。
-
-指针常量（pointer to const）：指针本身是常量，即指针不能指向其他对象，但可以通过该指针修改所指向的对象。
+const对象的成员是不能修改的，而通过指针维护的对象确实可以修改的；
+const成员函数不可以修改对象的数据，不管对象是否具有const性质。编译时以是否修改成员数据为依据进行检查
 
 常对象（const object）：被声明为 `const` 的对象，在其初始化后不能被修改。常对象的成员变量也自动成为常量。
 
