--- a/docs/01.语言/02.C++/101.编译与调试/01.gcc与g++.md
+++ b/docs/01.语言/02.C++/101.编译与调试/01.gcc与g++.md
@@ -3,9 +3,8 @@ title: gcc与g++
 date: 2023-07-30 20:16:50
 permalink: /pages/83da46/
 categories:
-  - 语言
   - C++
-  - 程序编译
+  - 编译与调试
 tags:
   - 
 author: 
