--- a/docs/01.语言/02.C++/02.参数传递的几种方式.md
+++ b/docs/01.语言/02.C++/02.参数传递的几种方式.md
@@ -12,42 +12,27 @@ author:
 ---
 
 ## 一、值传参
+- 值传参会创建原始对象的副本，并将副本传递给函数，<span style="color: red;">**对对象的各个属性值进行浅拷贝**</span>。
+- 值传参适用于需要修改参数值或不希望被调用函数对原始对象进行修改的情况。
+- 值传参传递的是副本，因此对参数的修改不会影响原始对象本身。
+- 对于较小的对象，值传参的性能通常比较高效，因为不需要处理引用或指针。
 
-
-### 1，值传参（Pass by Value）：
-   - 值传参会创建原始对象的副本，并将副本传递给函数，对对象的各个属性值进行浅拷贝。
-   - 值传参适用于需要修改参数值或不希望被调用函数对原始对象进行修改的情况。
-   - 值传参传递的是副本，因此对参数的修改不会影响原始对象本身。
-   - 对于较小的对象，值传参的性能通常比较高效，因为不需要处理引用或指针。
 ## 二、引用传参
+- 引用传参通过引用将<span style="color: red;">**原始对象**</span>直接传递给函数，<span style="color: red;">**不需要拷贝对象的各个属性值**</span>。
+- 引用传参直接对原始对象进行操作，函数内部对参数的修改可能会影响到原始对象的状态。
+- 引用传参适用于需要修改参数值，并希望这种修改对原始对象生效的情况。
+- <span style="color: red;">**引用传参省去了拷贝对象的开销，对于较大的对象或容器类型，引用传参可能更高效**</span>。
+- 引用传参必须指向一个有效的对象。
 
-### 2，引用传参（Pass by Reference）：
-   - 引用传参通过引用将原始对象直接传递给函数，不需要拷贝对象的各个属性值。
-   - 函数内部对参数的修改会直接影响到原始对象。
-   - 引用传参适用于需要修改参数值，并希望这种修改对原始对象生效的情况。
-   - 引用传参省去了拷贝对象的开销，对于较大的对象或容器类型，引用传参可能更高效。
-   - 由于引用传参直接对原始对象进行操作，需要注意函数内部对参数的修改可能会影响到原始对象的状态。
+## 三、指针传参
+- 指针传参，可以接受空指针作为参数。
+- 指针传参，函数可以通过指针来间接地修改原始对象的值。
+- 指针传参可能需要进行NULL判断，并且在使用指针时需要通过解引用操作符(*)来访问被指向的对象。
 
+<!-- 
 ### 3，总的来说，值传参和引用传参在以下方面有区别：
 - 值传参会创建副本，而引用传参直接操作原始对象。
 - 值传参适用于需要修改参数值或不希望被调用函数对原始对象进行修改的情况。
 - 引用传参适用于需要修改参数值，并希望这种修改对原始对象生效的情况。
 - 值传参适用于较小的对象，而引用传参适用于较大的对象或容器类型。
-- 值传参的性能通常比较高效，而引用传参省去了拷贝对象的开销。
-
-选择值传参还是引用传参取决于具体的需求和情况。如果需要在函数内部修改参数，并希望这些修改影响到原始对象，可以选择引用传参。否则，如果不需要修改参数或希望避免影响原始对象，可以选择值传参。
-## 三、指针传参
-
-引用传参和指针传参是 C++ 中常用的两种向函数传递参数的方式，它们有以下几点区别：
-
-1. 语法：引用传参使用 `&` 符号来声明函数参数，而指针传参使用 `*` 符号来声明函数参数。
-
-2. 空值（null value）：引用传参必须指向一个有效的对象，而指针传参可以接受空指针作为参数。
-
-3. 改变原对象：通过引用传参，函数可以修改传入的参数的值，在函数内对参数的修改会直接反映到原始对象上；通过指针传参，函数可以通过指针来间接地修改原始对象的值。
-
-4. 语义清晰度：引用传参在代码中更加简洁明确，可以让代码的意图更加明确。指针传参可能需要进行NULL判断，并且在使用指针时需要通过解引用操作符(*)来访问被指向的对象。
-
-5. 可选性：引用传参没有空值的概念，所以在某些情况下如果需要表示一个“无效”的情况，或者某个参数是可选的，那么指针传参可能更合适，可以使用空指针来表示这种情况。
-
-总的来说，引用传参更加安全、简洁和直观，可以避免空指针异常等问题；而指针传参则更加灵活，可用于处理空值或者在函数内部修改传入参数的情况。选择使用哪种方式取决于具体的需求和代码设计的风格。
+- 值传参的性能通常比较高效，而引用传参省去了拷贝对象的开销。 -->
