--- a/docs/01.语言/02.C++/04.C++多态.md
+++ b/docs/01.语言/02.C++/04.C++多态.md
@@ -12,8 +12,17 @@ author:
 ---
 
 ## 一、虚函数
-好的，以下是更新后的代码，其中包含了虚继承和更详细的说明：
 
+## 二、虚析构
+
+## 三、多态
+
+## 四、虚继承
+
+
+## 五、虚表指针
+
+<!-- 
 ```cpp
 #include <iostream>
 
@@ -119,12 +128,7 @@ Cat destructor called.
 Mammal destructor called.
 Animal destructor called.
 ```
-## 二、虚析构
 
-## 三、多态
-
-## 四、虚继承
-当然，请看以下示例：
 
 ```cpp
 class Animal {
@@ -178,29 +182,6 @@ public:
 class Bird : virtual public Animal {
 public:
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   std::string feathersColor;
 };
 
@@ -225,7 +206,6 @@ public:
 3. 维护类之间的关系：通过虚继承，明确了派生类与虚基类之间的直接继承关系。
 
 需要注意的是，虚继承会增加解析虚函数的时间开销，因为在运行时需要通过虚表指针来定位正确的虚函数。所以在设计类继承体系时，应该根据具体情况来评估是否使用虚继承。
-## 五、虚表指针
 
 虚函数表（Virtual Function Table），简称为 vtable，是C++中实现多态性（polymorphism）的关键机制之一。
 
@@ -243,4 +223,4 @@ public:
 静态联编：
 
 
-虚函数、虚析构、多态、虚继承、虚表指针
+虚函数、虚析构、多态、虚继承、虚表指针 -->
