--- a/docs/01.语言/02.C++/04.C++多态.md
+++ b/docs/01.语言/02.C++/04.C++多态.md
@@ -12,13 +12,63 @@ author:
 ---
 
 ## 一、虚函数
+* C++中的虚函数是一种用于实现多态性的机制，它允许派生类重写基类的同名成员函数，实现基类指针或引用调用派生类对象时动态地确定调用哪个函数；
+* 其动态调用是通过虚函数表来实现的；
+* 一般通过`virtual`关键字来声明某个成员函数为虚函数；
+* 当基类中该函数没有实际意义时，可以通过`virtual`关键字声明后令其等于0，声明为纯虚函数，纯虚函数无法直接创建对象；
+```cpp
+#include <iostream>
+using namespace std;
+
+// 基类 Animal
+class Animal {
+public:
+    virtual void MakeSound() {
+        cout << "aaaaaaa" << endl;
+    }
+};
+
+// 派生类 Dog
+class Dog : public Animal {
+public:
+    void MakeSound() override {
+        cout << "wang wang wang ..." << endl;
+    }
+};
+
+// 派生类 Cat
+class Cat : public Animal {
+public:
+    void MakeSound() override {
+        cout << "miao miao miao ..." << endl;
+    }
+};
+
+int main() {
+    Animal* animal1, * animal2;
+
+    // 创建一个 Dog 对象，并通过基类指针调用虚函数
+    animal1 = new Dog();
+    animal1->MakeSound();
+
+    // 创建一个 Cat 对象，并通过基类指针调用虚函数
+    animal2 = new Cat();
+    animal2->MakeSound();
+
+    return 0;
+}
+/*
+output:
+wang wang wang ...
+miao miao miao ...
+*/
+```
 
 ## 二、虚析构
 
 ## 三、多态
 
 ## 四、虚继承
-
 
 ## 五、虚表指针
 
