--- a/docs/01.语言/01.Go/02.Slice的源码解读.md
+++ b/docs/01.语言/01.Go/02.Slice的源码解读.md
@@ -96,7 +96,7 @@ func main() {
 
 ## 三、重要函数
 ### 1，makeslice 函数
-* 在创建 Slice 时，主要是对要分配的**内存地址大小、内存大小**、长度和容量进行了判断；
+* 在创建 Slice 时，主要是对要分配的**内存地址大小、内存大小**、长度和容量进行判断；
 ::: details
 ```go
 func panicmakeslicelen() {
@@ -124,12 +124,130 @@ func makeslice(et *_type, len, cap int) unsafe.Pointer {
 ```
 :::
 ### 2，growslice 函数
+* 元素大小为 0 时，返回的是nil切片，即切片中的数组地址为nil，但是切片不为nil；
+* 扩容逻辑：
+  * 当需要的容量是旧容量的 2 倍多时，直接为该值；
+  * 否则：
+    * 旧容量小于 1024 时：
+      * 按照旧容量的 2 倍扩容；
+    * 否则：
+      * 直接对旧容量<span style="color: red;">**连续多次 1.25 倍**</span>进行扩容，直至大于需要的容量；
+* 按照内存对齐后，根据内存分配算法计算应该申请的内存大小；
+* 并<span style="color: red;">**根据实际申请的内存大小重新计算出实际能够存储的容量大小**</span>，不会小于上述扩容值；
+* 再次进行内存溢出判断；
+* 元素中如果有指针时，申请内存的方式会不一样，需要进行垃圾回收时的内存标记；
+* 将数据从旧切片迁移至新的切片，并返回；
 
+::: details
+```go
+// 参数：元素类型、旧切片、新切片的最小容量(也即新切片的长度)
+func growslice(et *_type, old slice, cap int) slice {
+	// 新的容量小于老的容量时，直接panic
+	if cap < old.cap {
+		panic(errorString("growslice: cap out of range"))
+	}
 
-## 示例
-### 示例1：修改复制后的切片影响原来的切片
+	// 元素大小为 0 时，直接返回一个 nil 切片
+	if et.size == 0 {
+		// 追加不应创建具有 nil 指针但非零长度的切片
+		// 假设在这种情况下，append 不需要保留 old.array。
+		return slice{unsafe.Pointer(&zerobase), old.len, cap}
+	}
 
-<span>创建切片 s，并传递给函数 `test`，test 函数中的切片 t 是 main 函数中切片 s 的副本，其字段 array 的值是一样的。也就是说，切片 s 和 t，共用的是同一个底层数组，那么在函数 test 中对切片 t 的存储的值进行修改，同时也会反馈到切片 s，所以在 main 函数中再次打印 s 时，会发现其存储的值发生了改变。</span>
+	newcap := old.cap
+	doublecap := newcap + newcap
+	if cap > doublecap {
+		// 如果需要的容量大于旧容量的两倍，则新容量直接为该容量
+		newcap = cap
+	} else {
+		// 需要的容量小于或等于旧容量的两倍
+		if old.cap < 1024 {
+			// 旧容量小于 1024 时，则新容量直接为旧容量的两倍
+			newcap = doublecap
+		} else {
+			// 旧容量大于或等于1024
+			for 0 < newcap && newcap < cap {
+				// 直接对旧容量连续多次 1.25 倍进行扩容，直至大于需要的容量
+				newcap += newcap / 4
+			}
+			// 如果计算出的新容量小于或等于0时，直接令其为需要的容量
+			if newcap <= 0 {
+				newcap = cap
+			}
+		}
+	}
+
+	// 计算出是否内存溢出、旧长度的内存大小、新长度的内存大小、新容量的内存大小、分配内存后的新容量
+	var overflow bool
+	var lenmem, newlenmem, capmem uintptr
+	switch {
+	case et.size == 1: // 对于 1，不需要任何除法乘法
+		lenmem = uintptr(old.len)
+		newlenmem = uintptr(cap)
+		capmem = roundupsize(uintptr(newcap)) // 返回 mallocgc 将在请求大小时分配的内存块的大小
+		overflow = uintptr(newcap) > maxAlloc
+		newcap = int(capmem)
+	case et.size == sys.PtrSize: // 对于PtrSize，编译器将优化除法乘法为一个常数的移位
+		lenmem = uintptr(old.len) * sys.PtrSize
+		newlenmem = uintptr(cap) * sys.PtrSize
+		capmem = roundupsize(uintptr(newcap) * sys.PtrSize)
+		overflow = uintptr(newcap) > maxAlloc/sys.PtrSize
+		// 在内存分配、对齐后，实际分配的内存大小存储的元素可能大于 newcap，所以此处需要重新赋值
+		newcap = int(capmem / sys.PtrSize)
+	case isPowerOfTwo(et.size): // 对于 2 的幂，直接使用位运算
+		var shift uintptr
+		if sys.PtrSize == 8 {
+			// 计算出 et.size 的值用二进制表示时，最右侧 1 的位置
+			shift = uintptr(sys.Ctz64(uint64(et.size))) & 63
+		} else {
+			shift = uintptr(sys.Ctz32(uint32(et.size))) & 31
+		}
+		lenmem = uintptr(old.len) << shift
+		newlenmem = uintptr(cap) << shift
+		capmem = roundupsize(uintptr(newcap) << shift)
+		overflow = uintptr(newcap) > (maxAlloc >> shift)
+		newcap = int(capmem >> shift)
+	default:
+		lenmem = uintptr(old.len) * et.size
+		newlenmem = uintptr(cap) * et.size
+		capmem, overflow = math.MulUintptr(et.size, uintptr(newcap))
+		capmem = roundupsize(capmem)
+		newcap = int(capmem / et.size)
+	}
+
+	if overflow || capmem > maxAlloc {
+		// 有内存溢出直接 panic
+		panic(errorString("growslice: cap out of range"))
+	}
+
+	var p unsafe.Pointer
+	if et.ptrdata == 0 {
+		p = mallocgc(capmem, nil, false)
+		// The append() that calls growslice is going to overwrite from old.len to cap (which will be the new length).
+		// Only clear the part that will not be overwritten.
+		memclrNoHeapPointers(add(p, newlenmem), capmem-newlenmem)
+	} else {
+		// Note: can't use rawmem (which avoids zeroing of memory), because then GC can scan uninitialized memory.
+		p = mallocgc(capmem, et, true)
+		if lenmem > 0 && writeBarrier.enabled {
+			// Only shade the pointers in old.array since we know the destination slice p
+			// only contains nil pointers because it has been cleared during alloc.
+			bulkBarrierPreWriteSrcOnly(uintptr(p), uintptr(old.array), lenmem-et.size+et.ptrdata)
+		}
+	}
+	// 将数据从旧的切片迁移至新的切片
+	memmove(p, old.array, lenmem)
+
+	return slice{p, old.len, newcap}
+}
+
+```
+:::
+
+## 三、示例
+### 1，修改复制后的切片影响原来的切片
+
+<span>切片 s 和 t，共用同一个底层数组，切片 t 的存储的值进行修改后，数组地址没有发生改变，那么修改结果就会反馈到切片 s；</span>
 
 ```go
 package main
@@ -141,7 +259,7 @@ import (
 
 func test(t []int) {
 	log.Printf("t, vals: %v, array: %v\n", t, *(**int)(unsafe.Pointer(&t)))
-	t[0] = 9
+	t[0] = 9 // 数组地址未发生改变，共用同一个数组
 	log.Printf("t, vals: %v, array: %v\n", t, *(**int)(unsafe.Pointer(&t)))
 }
 
@@ -160,5 +278,74 @@ main.go:9: t, vals: [11], array: 0x1400001e068
 main.go:11: t, vals: [9], array: 0x1400001e068
 main.go:20: s, vals: [9], array: 0x1400001e068
 */
+```
 
+### 2，修改复制后的切片不影响原来的切片
+
+<span>切片 s 和 t，共用同一个底层数组，切片 t append后，发生了扩容，t 的数组地址发生了改变，此时 s 和 t 不再共用同一个底层数组，那么修改的结果不会反馈到切片 s上；</span>
+
+```go
+package main
+
+import (
+	"log"
+	"unsafe"
+)
+
+func test(t []int) {
+	log.Printf("t, vals: %v, array: %v\n", t, *(**int)(unsafe.Pointer(&t)))
+	t = append(t, 3, 4, 5) // append 前后，数组地址发生改变，两个切片使用不同的数组
+	log.Printf("t, vals: %v, array: %v\n", t, *(**int)(unsafe.Pointer(&t)))
+}
+
+func main() {
+	s := make([]int, 0, 1)
+	s = append(s, 11)
+	log.SetFlags(log.Lshortfile)
+	log.Printf("s, vals: %v, array: %v\n", s, *(**int)(unsafe.Pointer(&s))) // 对 array 取值，其值是数组的地址
+	test(s)
+	log.Printf("s, vals: %v, array: %v\n", s, *(**int)(unsafe.Pointer(&s)))
+}
+/*
+output:
+main.go:18: s, vals: [11], array: 0x140000a2008
+main.go:9: t, vals: [11], array: 0x140000a2008
+main.go:11: t, vals: [11 3 4 5], array: 0x140000b4020
+main.go:20: s, vals: [11], array: 0x140000a2008
+*/
+```
+
+### 3，修改原切片的子切片会影响原切片
+
+<span>切片 s 和 t，共用同一个底层数组，不过 t 中数组的地址是 s 中数组第二个元素的地址，切片 t 的存储的值进行修改后，数组地址没有发生改变，那么对 t[0] 的修改就相当于对 s[1] 的修改；</span>
+
+```go
+package main
+
+import (
+	"log"
+	"unsafe"
+)
+
+func test(t []int) {
+	log.Printf("t, vals: %v, array: %v\n", t, *(**int)(unsafe.Pointer(&t)))
+	t[0] = 9 // 共用原数组的一部分数组，且数组地址未发生改变
+	log.Printf("t, vals: %v, array: %v\n", t, *(**int)(unsafe.Pointer(&t)))
+}
+
+func main() {
+	s := make([]int, 0, 1)
+	s = append(s, 1, 2, 3, 4, 5)
+	log.SetFlags(log.Lshortfile)
+	log.Printf("s, vals: %v, array: %v\n", s, *(**int)(unsafe.Pointer(&s))) // 对 array 取值，其值是数组的地址
+	test(s[1:3])
+	log.Printf("s, vals: %v, array: %v\n", s, *(**int)(unsafe.Pointer(&s)))
+}
+/*
+output:
+main.go:18: s, vals: [1 2 3 4 5], array: 0x1400012a030
+main.go:9: t, vals: [2 3], array: 0x1400012a038
+main.go:11: t, vals: [9 3], array: 0x1400012a038
+main.go:20: s, vals: [1 9 3 4 5], array: 0x1400012a030
+*/
 ```
