--- a/docs/01.语言/02.C++/04.C++多态.md
+++ b/docs/01.语言/02.C++/04.C++多态.md
@@ -12,19 +12,19 @@ author:
 ---
 
 ## 一、虚函数
-* C++中的虚函数是一种用于实现多态性的机制，它允许派生类重写基类的同名成员函数，实现基类指针或引用调用派生类对象时动态地确定调用哪个函数；
-* 其动态调用是通过虚函数表来实现的；
+* C++中的虚函数是一种用于实现多态性的机制，它允许派生类重写基类的同名成员函数；
+* 基类指针或引用调用派生类对象时，在运行时，根据其实际指向的对象，调用该类重写的成员函数；
+* 其动态调用是通过虚函数表来实现的，实现于运行阶段；
 * 一般通过`virtual`关键字来声明某个成员函数为虚函数；
 * 当基类中该函数没有实际意义时，可以通过`virtual`关键字声明后令其等于0，声明为纯虚函数，纯虚函数无法直接创建对象；
 ```cpp
 #include <iostream>
-using namespace std;
 
 // 基类 Animal
 class Animal {
 public:
     virtual void MakeSound() {
-        cout << "aaaaaaa" << endl;
+        std::cout << "aaaaaaa" << std::endl;
     }
 };
 
@@ -32,7 +32,7 @@ public:
 class Dog : public Animal {
 public:
     void MakeSound() override {
-        cout << "wang wang wang ..." << endl;
+        std::cout << "wang wang wang ..." << std::endl;
     }
 };
 
@@ -40,19 +40,17 @@ public:
 class Cat : public Animal {
 public:
     void MakeSound() override {
-        cout << "miao miao miao ..." << endl;
+        std::cout << "miao miao miao ..." << std::endl;
     }
 };
 
 int main() {
-    Animal* animal1, * animal2;
-
     // 创建一个 Dog 对象，并通过基类指针调用虚函数
-    animal1 = new Dog();
+    Animal* animal1 = new Dog();
     animal1->MakeSound();
 
     // 创建一个 Cat 对象，并通过基类指针调用虚函数
-    animal2 = new Cat();
+    Animal* animal2 = new Cat();
     animal2->MakeSound();
 
     return 0;
@@ -65,12 +63,92 @@ miao miao miao ...
 ```
 
 ## 二、虚析构
+* 当基类的析构函数前加上`virtual`关键字时，该析构函数为虚析构；
+* 基类指针指向派生类时：
+  * 在构造派生类对象时，会先执行基类构造函数，再执行子类构造函数；
+  * 在释放派生类对象时，会先执行子类析构函数，再执行基类析构函数；
+* 连续多次继承时，从最顶级的父类依次向下执行构造函数，从最低级的子类依次向上执行析构函数；
+* <span style="color: red;">如果基类析构函数不是虚析构函数，则释放派生类对象时，不会执行子类析构函数，可能会导致某些指针未释放</span>；
+
+::: details
+```cpp
+#include <iostream>
+
+// 基类 Animal
+class Animal
+{
+public:
+    Animal()
+    {
+        std::cout << "Animal construct" << std::endl;
+    }
+    explicit Animal(std::string name) : _name(name)
+    {
+        std::cout << "Animal construct, name: " << _name << std::endl;
+    }
+    virtual ~Animal()
+    {
+        std::cout << "Animal deconstruct" << std::endl;
+    }
+
+private:
+    std::string _name;
+};
+
+// 派生类 Dog
+class Dog : public Animal
+{
+public:
+    Dog()
+    {
+        std::cout << "Dog construct" << std::endl;
+    }
+    explicit Dog(std::string name) : Animal(name), _name(name)
+    {
+        std::cout << "Dog construct, name: " << _name << std::endl;
+    }
+    ~Dog()
+    {
+        std::cout << "Dog deconstruct" << std::endl;
+    }
+
+private:
+    std::string _name;
+};
+
+int main()
+{
+    Animal *animal1 = new Dog();
+    delete animal1;
+    std::cout << "----------------------" << std::endl;
+    Animal *animal2 = new Dog("dog");
+    delete animal2;
+
+    return 0;
+}
+
+/*
+Animal construct
+Dog construct
+Dog deconstruct
+Animal deconstruct
+----------------------
+Animal construct, name: dog
+Dog construct, name: dog
+Dog deconstruct
+Animal deconstruct
+*/
+```
+:::
 
 ## 三、多态
 
 ## 四、虚继承
 
 ## 五、虚表指针
+* 虚表指针是编译器在具有虚函数的类中插入的隐藏指针；
+* 它指向虚表（vtable），虚表是一个包含了虚函数地址的表格；
+* 虚表指针的存在使得程序在运行时能够根据对象的实际类型动态地确定调用的是哪个虚函数。
 
 <!-- 
 ```cpp
@@ -151,8 +229,6 @@ int main() {
 ```
 
 在这个示例中，我们引入了一个新的基类 `Mammal`，它使用了虚继承（`virtual public Animal`）。`Dog` 和 `Cat` 类都继承自 `Mammal`。
-
-虚表指针是编译器在具有虚函数的类中插入的隐藏指针。它指向虚表（vtable），虚表是一个包含了虚函数地址的表格。虚表指针的存在使得程序在运行时能够根据对象的实际类型动态地确定调用的是哪个虚函数。
 
 构造与析构的顺序如下：
 1. 首先创建 `Dog` 对象。在创建 `Dog` 对象时，会按照继承关系依次调用基类的构造函数，这里是 `Animal` 的构造函数，然后是 `Mammal` 的构造函数，最后是 `Dog` 的构造函数。构造顺序是从基类到派生类。
