--- a/docs/01.语言/02.C++/04.C++多态.md
+++ b/docs/01.语言/02.C++/04.C++多态.md
@@ -146,9 +146,13 @@ Animal deconstruct
 ## 四、虚继承
 
 ## 五、虚表指针
-* 虚表指针是编译器在具有虚函数的类中插入的隐藏指针；
-* 它指向虚表（vtable），虚表是一个包含了虚函数地址的表格；
-* 虚表指针的存在使得程序在运行时能够根据对象的实际类型动态地确定调用的是哪个虚函数。
+* 编译器会为每个具有虚函数的类创建一个虚函数表，虚函数表中会依次存储每个虚函数的地址；
+* 在类进行实例化时，会在每个实例对象的地址首位存储虚函数表的地址，即虚表指针；
+* 虚表指针是编译器在具有虚函数的类的对象中插入的隐藏指针；
+* 虚表指针的存在使得程序在运行时能够根据对象的实际类型动态地确定调用的是哪个虚函数；
+* 以上述虚函数举例：
+  * animal1 实际指向的是 `Dog` 类的对象，那么会通过该对象的虚表指针找到其类的虚函数表，并调用其重载的虚函数；
+  * 
 
 <!-- 
 ```cpp
